Widget factory now supports jQuery UI style objects.

--- a/test/mighty.html
+++ b/test/mighty.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="css/style.css">
 
 <!-- Eventually we will incorporate Boot into mighty.js -->
-<script defer src="../../Boot/src/boot.js"></script>
+<script src="../../Boot/src/boot.js"></script>
 
 </head>
 
@@ -25,15 +25,15 @@
 
 	<h2>Source Widget #1</h2>
 	
-	<a name="mighty-module" class="source" data-width="400" href="http://www.mightymodules.com/tab/">Tab Mighty Module</a>
+	<a name="mighty" class="source" data-width="400" href="http://www.mightymodules.com/source/">Source Mighty Module</a>
 	<script defer src="../src/mighty.js"></script>
 	
 	<h2>Source Widget #2</h2>
-	<a name="mighty-module" class="source" data-width="300" href="http://www.mightymodules.com/tab/">Tab Mighty Module</a>
+	<a name="mighty" class="source" data-width="300" href="http://www.mightymodules.com/source/">Source Mighty Module</a>
 	<script defer src="../src/mighty.js"></script>
 	
 	<h2>Source Widget #3</h2>
-	<a name="mighty-module" class="source" data-width="200" href="http://www.mightymodules.com/tab/">Tab Mighty Module</a>
+	<a name="mighty" class="source" data-width="200" href="http://www.mightymodules.com/source/">Source Mighty Module</a>
 	<script defer src="../src/mighty.js"></script>
 	
 </div>
