Test page now references Boot.js from github.

--- a/test/mighty.html
+++ b/test/mighty.html
@@ -14,7 +14,8 @@
   <link rel="stylesheet" href="css/style.css">
 
 <!-- Eventually we will incorporate Boot into mighty.js -->
-<script src="../../Boot/src/boot.js"></script>
+<!--<script src="../../Boot/src/boot.js"></script>-->
+<script src="https://raw.github.com/artzstudio/Boot/master/src/boot.js"></script>
 
 </head>
 
