Added example of fetching a module CSS dependency.

--- a/test/mighty.html
+++ b/test/mighty.html
@@ -25,16 +25,16 @@
 <div class="content">
 
 	<h2>Source Widget #1</h2>
-	
-	<a name="mighty" class="source" data-width="400" href="http://www.mightymodules.com/source/">Source Mighty Module</a>
+
+	<a name="mighty" class="source" data-width="400" href="http://www.mightymodules.com/source/"><b>Source</b> Mighty Module</a>
 	<script defer src="../src/mighty.js"></script>
-	
+
 	<h2>Source Widget #2</h2>
-	<a name="mighty" class="source" data-width="300" href="http://www.mightymodules.com/source/">Source Mighty Module</a>
+	<a name="mighty" class="source" href="http://www.mightymodules.com/source/"><b>Source</b> Mighty Module</a>
 	<script defer src="../src/mighty.js"></script>
-	
+
 	<h2>Source Widget #3</h2>
-	<a name="mighty" class="source" data-width="200" href="http://www.mightymodules.com/source/">Source Mighty Module</a>
+	<a name="mighty" class="source" data-width="200" href="http://www.mightymodules.com/source/"><b>Source</b> Mighty Module</a>
 	<script defer src="../src/mighty.js"></script>
 	
 </div>
