--- a/test/mighty.html
+++ b/test/mighty.html
@@ -15,7 +15,7 @@
 
 <!-- Eventually we will incorporate Boot into mighty.js -->
 <!--<script src="../../Boot/src/boot.js"></script>-->
-<script src="//raw.github.com/artzstudio/Boot/master/src/boot.js"></script>
+<script src="https://raw.github.com/artzstudio/Boot/master/src/boot.js"></script>
 
 </head>
 
@@ -38,9 +38,9 @@
 	<script defer src="../src/mighty.js"></script>
 
 	<h2>Most Popular Widget</h2>
-	<a name="mighty" class="mostpopular" data-width="200" href="http://www.mightymodules.com/source/">Most Popular Module</a>
+	<a name="mighty" class="mostpopular" href="http://www.mightymodules.com/source/">Most Popular Module</a>
 	<script defer src="../src/mighty.js"></script>
-	
+
 </div>
 
 </body>
