--- a/test/mighty.html
+++ b/test/mighty.html
@@ -15,7 +15,7 @@
 
 <!-- Eventually we will incorporate Boot into mighty.js -->
 <!--<script src="../../Boot/src/boot.js"></script>-->
-<script src="//raw.github.com/artzstudio/Boot/master/src/boot.js"></script>
+<script src="https://raw.github.com/artzstudio/Boot/master/src/boot.js"></script>
 
 </head>
 
