--- a/test/mighty.html
+++ b/test/mighty.html
@@ -14,8 +14,8 @@
   <link rel="stylesheet" href="css/style.css">
 
 <!-- Eventually we will incorporate Boot into mighty.js -->
-<!--<script src="../../Boot/src/boot.js"></script>-->
-<script src="https://raw.github.com/artzstudio/Boot/master/src/boot.js"></script>
+<script src="../../Boot/src/boot.js"></script>
+<!--<script src="https://raw.github.com/artzstudio/Boot/master/src/boot.js"></script>-->
 
 </head>
 
@@ -26,19 +26,19 @@
 
 	<h2>Source Widget #1</h2>
 
-	<a name="mighty" class="source" data-width="400" href="http://www.mightymodules.com/source/"><b>Source</b> Mighty Module</a>
+	<a name="mighty" class="mighty-source" data-width="400" href="http://www.mightymodules.com/source/"><b>Source</b> Mighty Module</a>
 	<script defer src="../src/mighty.js"></script>
 
 	<h2>Source Widget #2</h2>
-	<a name="mighty" class="source" href="http://www.mightymodules.com/source/"><b>Source</b> Mighty Module</a>
+	<a name="mighty" class="mighty-source" href="http://www.mightymodules.com/source/"><b>Source</b> Mighty Module</a>
 	<script defer src="../src/mighty.js"></script>
 
 	<h2>Source Widget #3</h2>
-	<a name="mighty" class="source" data-width="200" href="http://www.mightymodules.com/source/"><b>Source</b> Mighty Module</a>
+	<a name="mighty" class="mighty-source" data-width="200" href="http://www.mightymodules.com/source/"><b>Source</b> Mighty Module</a>
 	<script defer src="../src/mighty.js"></script>
 
 	<h2>Most Popular Widget</h2>
-	<a name="mighty" class="mostpopular" href="http://www.mightymodules.com/source/">Most Popular Module</a>
+	<a name="mighty" class="mighty-mostpopular" href="http://www.mightymodules.com/source/">Most Popular Module</a>
 	<script defer src="../src/mighty.js"></script>
 
 </div>
