Started merged Mighty/Boot library concept.

--- a/test/mighty.html
+++ b/test/mighty.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="css/style.css">
 
 <!-- Eventually we will incorporate Boot into mighty.js -->
-<script src="../../Boot/src/boot.js"></script>
+<!--<script src="../../Boot/src/boot.js"></script>-->
 <!--<script src="https://raw.github.com/artzstudio/Boot/master/src/boot.js"></script>-->
 
 </head>
@@ -22,13 +22,6 @@
 <body>
 <h1><b>Mighty</b><b>Module</b> Test Page</h1>
 <pre id="log" style="font-size:12px;"></pre>
-<script>
-var logElem = document.getElementById("log");
-
-Boot.log.init({
-	elem: logElem
-});
-</script>
 <div class="content">
 
 	<h2>Source Widget #1</h2>
