Major overhaul of Mighty code organization.

--- a/test/mighty.html
+++ b/test/mighty.html
@@ -27,19 +27,19 @@
 	<h2>Source Widget #1</h2>
 
 	<a name="mighty" class="mighty-source" data-width="500" href="http://www.mightymodules.com/source/"><b>Source</b> Mighty Module</a>
-	<script defer src="../src/mighty.js"></script>
+	<script defer src="../src/mighty.amd.js"></script>
 
 	<h2>Source Widget #2</h2>
 	<a name="mighty" class="mighty-source" href="http://www.mightymodules.com/source/"><b>Source</b> Mighty Module</a>
-	<script defer src="../src/mighty.js"></script>
+	<script defer src="../src/mighty.amd.js"></script>
 
 	<h2>Source Widget #3</h2>
 	<a name="mighty" class="mighty-source2" data-width="200" href="http://www.mightymodules.com/source2/"><b>Source</b> Mighty Module</a>
-	<script defer src="../src/mighty.js"></script>
+	<script defer src="../src/mighty.amd.js"></script>
 
 	<h2>Most Popular Widget</h2>
 	<a name="mighty" class="mighty-mostpopular" href="http://www.mightymodules.com/source/">Most Popular Module</a>
-	<script defer src="../src/mighty.js"></script>
+	<script defer src="../src/mighty.amd.js"></script>
 
 </div>
 
