--- a/src/mighty.source.html
+++ b/src/mighty.source.html
@@ -1,10 +1,19 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Untitled Document</title>
-</head>
-
-<body>
-</body>
-</html>
+<h2>Mighty Source</h2>
+<h3>Tab 1</h3>
+<ul>
+    <li><a href="#">Link 1</a></li>
+    <li><a href="#">Link 2</a></li>
+    <li><a href="#">Link 3</a></li>
+</ul>
+<h3>Tab 2</h3>
+<ul>
+    <li><a href="#">Link 4</a></li>
+    <li><a href="#">Link 5</a></li>
+    <li><a href="#">Link 6</a></li>
+</ul>
+<h3>Tab 3</h3>
+<ul>
+    <li><a href="#">Link 7</a></li>
+    <li><a href="#">Link 8</a></li>
+    <li><a href="#">Link 9</a></li>
+</ul>
