Committing revamped approach to maker module

--- a/test/mighty.html
+++ b/test/mighty.html
@@ -53,11 +53,15 @@
 	<a name="mighty" class="mighty-source2" data-width="200" href="http://www.mightymodules.com/source2/"><b>Source</b> Mighty Module</a>
 	<script defer src="../src/mighty.js"></script>
 --> 
-	<!--
+<!--
 	<h2>Most Popular Widget</h2>
 	<a name="mighty" class="mighty-mostpopular" href="http://www.mightymodules.com/source/">Most Popular Module</a>
 	<script defer src="../src/mighty.js"></script>
---> 
+-->
+
+	<h2>Maker Module</h2>
+	<a name="mighty" class="mighty-maker" data-blueprint="mostpopular" href="http://www.mightymodules.com/source/">Maker Module</a>
+	<script defer src="../src/mighty.js"></script>
 </div>
 </body>
 </html>
