--- a/test/mighty.html
+++ b/test/mighty.html
@@ -18,29 +18,40 @@
 
 <body>
 <h1><b>Mighty</b><b>Module</b> Test Page</h1>
-<pre id="log" style="font-size:12px;"></pre>
 <div class="content">
+<pre id="log" style="font-size:12px;"></pre>
+<script src="../src/mighty.js"></script> 
+<script>
+Mighty.log.init({ elem: document.getElementById("log") });
+</script>
+
 	<h2>Source Widget #1</h2>
 	<div class="mighty-source">
 		<h2>Mighty Source</h2>
-		<h3>Tab 1</h3>
-		<ul>
-			<li><a href="#">Link 1</a></li>
-			<li><a href="#">Link 2</a></li>
-			<li><a href="#">Link 3</a></li>
-		</ul>
-		<h3>Tab 2</h3>
-		<ul>
-			<li><a href="#">Link 4</a></li>
-			<li><a href="#">Link 5</a></li>
-			<li><a href="#">Link 6</a></li>
-		</ul>
-		<h3>Tab 3</h3>
-		<ul>
-			<li><a href="#">Link 7</a></li>
-			<li><a href="#">Link 8</a></li>
-			<li><a href="#">Link 9</a></li>
-		</ul>
+		<h3 class="tab">Tab 1</h3>
+		<div class="panel">
+			<ul>
+				<li><a href="#">Link 1</a></li>
+				<li><a href="#">Link 2</a></li>
+				<li><a href="#">Link 3</a></li>
+			</ul>
+		</div>
+		<h3 class="tab">Tab 2</h3>
+		<div class="panel">
+			<ul>
+				<li><a href="#">Link 4</a></li>
+				<li><a href="#">Link 5</a></li>
+				<li><a href="#">Link 6</a></li>
+			</ul>
+		</div>
+		<h3 class="tab">Tab 3</h3>
+		<div class="panel">
+			<ul>
+				<li><a href="#">Link 7</a></li>
+				<li><a href="#">Link 8</a></li>
+				<li><a href="#">Link 9</a></li>
+			</ul>
+		</div>
 		<a name="mighty" class="mighty-source" data-width="500" href="http://www.mightymodules.com/source/">Get the <b>Source Widget</b></a>
 	</div>
 	<script async defer src="../src/mighty.js"></script> 
@@ -48,18 +59,21 @@
 	<h2>Source Widget #2</h2>
 	<a name="mighty" class="mighty-source" href="http://www.mightymodules.com/source/">Get the <b>Source Widget</b></a>
 	<script async defer src="../src/mighty.js"></script>
+	
+	<h2>Maker Module</h2>
+	<div class="mighty-maker"><a name="mighty" class="mighty-maker" data-blueprint="mostpopular" href="http://www.mightymodules.com/source/">Get the <b>Maker Widget</b></a></div>
+	<script async defer src="../src/mighty.js"></script>
+
 <!--
 	<h2>Source Widget #3</h2>
 	<a name="mighty" class="mighty-source2" data-width="200" href="http://www.mightymodules.com/source2/"><b>Source</b> Mighty Module</a>
 	<script defer src="../src/mighty.js"></script>
 --> 
+
 	<h2>Most Popular Widget</h2>
 	<div class="mighty-mostpopular"><a name="mighty" class="mighty-mostpopular" href="http://www.mightymodules.com/source/">Get the <b>Most Popular Module</b></a></div>
 	<script async defer src="../src/mighty.js"></script>
 
-	<h2>Maker Module</h2>
-	<div class="mighty-maker"><a name="mighty" class="mighty-maker" data-blueprint="mostpopular" href="http://www.mightymodules.com/source/">Get the <b>Maker Widget</b></a></div>
-	<script async defer src="../src/mighty.js"></script>
 <!-- 
 	Example FB Code:
 	
