--- a/test/mighty.html
+++ b/test/mighty.html
@@ -58,7 +58,7 @@ Mighty.log.init({ elem: document.getElementById("log") });
 	<script async defer src="../src/mighty.js"></script>
 
 	<h2>Source Widget #2</h2>
-	<a name="mighty" class="mighty-source" href="http://www.mightymodules.com/source/">Get the <b>Source Widget</b></a>
+	<a name="mighty" class="mighty-source" data-selected="1" href="http://www.mightymodules.com/source/">Get the <b>Source Widget</b></a>
 	<script async defer src="../src/mighty.js"></script>
 <!--
 	<h2>Maker Module</h2>
