--- a/test/mighty.html
+++ b/test/mighty.html
@@ -86,6 +86,10 @@ Mighty.log.init({ elem: document.getElementById("log") });
 	}(document));</script>
 	<div class="fb-like" data-send="true" data-width="450" data-show-faces="true"></div>
 -->
+
+<h2>Breaking News Widget</h2>
+<div class="mighty-breakingnews"><a name="mighty" class="mighty-breakingnews" href="http://www.mightymodules.com/source/">Get the <b>Breaking News Module</b></a></div>
+<script async defer src="../src/mighty.js"></script>
 </div>
 </body>
 </html>
