Updates from Boot widget.

--- a/test/mighty.html
+++ b/test/mighty.html
@@ -26,7 +26,7 @@ Mighty.log.init({ elem: document.getElementById("log") });
 </script>
 
 	<h2>Source Widget #1</h2>
-	<div class="mighty-source">
+	<div id="mymodule" class="mighty-source">
 		<h2>Mighty Source</h2>
 		<h3 class="tab">Tab 1</h3>
 		<div class="panel">
