Further organizational changes.

--- a/demo/mighty.html
+++ b/demo/mighty.html
@@ -17,7 +17,7 @@
 
 <body>
 
-<script defer="defer" src="../src/mighty.js"></script>
+<script defer="defer" src="../src/mighty/mighty.js"></script>
 
 </body>
 </html>
