Started the factory.

--- a/factory/index.html
+++ b/factory/index.html
@@ -18,19 +18,17 @@
 
 <body>
 
-  <div id="container">
-    <header>
+<div class="header">
+<h1 class="logo">Bearing Fruit</h1>
+</div>
 
-    </header>
-    <div id="main" role="main">
-
-    </div>
-    <footer>
-
-    </footer>
-  </div>
-
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.js"></script>
+<div class="chooser">
+	<h2>Available Widgets</h2>
+	<ul>
+		<li></li>
+		<li></li>
+	</ul>
+</div>
 
 </body>
 </html>
