Committed progress made on the widget factory.

--- a/factory/index.html
+++ b/factory/index.html
@@ -19,16 +19,42 @@
 <body>
 
 <div class="header">
-<h1 class="logo">Bearing Fruit</h1>
+<h1 class="logo">Bearing <b>F</b><b>r</b><b>u</b><b>i</b><b>t</b></h1>
+<i>Because your content is a peacock that wants to fly.</i>
 </div>
 
 <div class="chooser">
 	<h2>Available Widgets</h2>
 	<ul>
-		<li></li>
-		<li></li>
+		<li><a class="widget" data-widget="mostpopular" href="#">Most Popular</a></li>
+		<li><a class="widget" data-widget="breakingnews" href="#">Breaking News</a></li>
+		<li><a class="widget" data-widget="slideshow" href="#">Slideshow</a></li>
+		<li><a class="widget" data-widget="mostwatchedvideos" href="#">Most Watched Videos</a></li>
 	</ul>
 </div>
 
+<div class="factory">
+	<ul class="widgets">
+		<li class="widget" data-widget="mostpopular">
+			<h3>Most Popular</h3>
+			<p>Surfaces the most popular content in a vertical or keyword, ensuring your visitors are a click away from the hottest stories on the web.</p>
+		</li>
+		<li class="widget" data-widget="breakingnews">
+			<h3>Breaking News</h3>
+			<p>Must see and trending content ensure your visitors have immediate, real time access to content before anyone else on the web.</p>
+		</li>
+		<li class="widget" data-widget="slideshow">
+			<h3>Slideshow</h3>
+			<p>Pictures are worth a thousand words - satisfy your users' natural desire to witness breaking, popular photo galleries across our network of sites.</p>
+		</li>
+		<li class="widget" data-widget="mostwatchedvideos">
+			<h3>Most Watched Videos</h3>
+			<p>Viral videos are key drivers of visitor engagement. Give your users the best of the web.</p>
+		</li>
+	</ul>
+</div>
+<script src="../src/mighty/mighty.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/factory.js"></script>
 </body>
 </html>
