Style updates to factory.

--- a/factory/index.html
+++ b/factory/index.html
@@ -19,12 +19,11 @@
 <body>
 
 <div class="header">
-<h1 class="logo">Bearing <b>F</b><b>r</b><b>u</b><b>i</b><b>t</b></h1>
-<i>Because your content is a peacock that wants to fly.</i>
+<h1 class="logo">Bearing<b>F</b><b>r</b><b>u</b><b>i</b><b>t</b><i>Because your content is a peacock that wants to fly.</i></h1>
 </div>
 
 <div class="chooser">
-	<h2>Available Widgets</h2>
+	<h2>Pick a Widget</h2>
 	<ul>
 		<li><a class="widget" data-widget="mostpopular" href="#">Most Popular</a></li>
 		<li><a class="widget" data-widget="breakingnews" href="#">Breaking News</a></li>
