Necessary updates for Factory Page
- Updated Make files for all widgets
- Modified the corresponding php files as per the changes done to Make
files
- Added Advertising block to factory page
- Some css fixes on most watched videos widget.

--- a/factory/index.html
+++ b/factory/index.html
@@ -13,7 +13,17 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
   <link rel="stylesheet" href="css/style.css?v=2">
+  <!-- Advertisement Setup start -->
  
+  <script type="text/javascript" src="http://o.aolcdn.com/ads/adsWrapper.js"></script>
+ 
+  <script type="text/javascript">
+	 	<!-- 
+	 	adSetTarget('_blank');
+	 	adSetAdURL('/_uac/adpage.html'); 
+	 	//-->
+  </script>
+  <!-- Advertisement Setup end -->
 </head>
 
 <body>
