"What's Being Read" widget updates. Added the widget to factory demo page.

--- a/factory/index.html
+++ b/factory/index.html
@@ -39,6 +39,7 @@
 		<li><a class="widget" data-widget="breakingnews" href="#">Breaking News</a></li>
 		<li><a class="widget" data-widget="slideshow" href="#">Slideshow</a></li>
 		<li><a class="widget" data-widget="mostwatchedvideos" href="#">Most Watched Videos</a></li>
+		<li><a class="widget" data-widget="realtime" href="#">What's Being Read</a></li>
 	</ul>
 </div>
 
@@ -59,6 +60,10 @@
 		<li class="widget" data-widget="mostwatchedvideos">
 			<h3>Most Watched Videos</h3>
 			<p>Viral videos are key drivers of visitor engagement. Give your users the best of the web.</p>
+		</li>
+		<li class="widget" data-widget="realtime">
+			<h3>What's Being Read</h3>
+			<p>What people are reading right now!!!</p>
 		</li>
 	</ul>
 </div>
