--- a/factory/index.html
+++ b/factory/index.html
@@ -40,6 +40,8 @@
 		<li><a class="widget" data-widget="slideshow" href="#">Slideshow</a></li>
 		<li><a class="widget" data-widget="mostwatchedvideos" href="#">Most Watched Videos</a></li>
 		<li><a class="widget" data-widget="realtime" href="#">What's Being Read</a></li>
+		<li><a class="widget" data-widget="localnews" href="#">Local News</a></li>
+
 	</ul>
 </div>
 
@@ -64,6 +66,10 @@
 		<li class="widget" data-widget="realtime">
 			<h3>What's Being Read</h3>
 			<p>What people are reading right now!!!</p>
+		</li>
+		<li class="widget" data-widget="localnews">
+			<h3>Local News</h3>
+			<p>News from your City!!!</p>
 		</li>
 	</ul>
 </div>
