First Commit of Featured Bloggers widget. Also included some CSS fixes for other widgets.

--- a/factory/index.html
+++ b/factory/index.html
@@ -37,6 +37,7 @@
 	<ul>
 		<li><a class="widget" data-widget="mostpopular" href="#">Most Popular</a></li>
 		<li><a class="widget" data-widget="breakingnews" href="#">Breaking News</a></li>
+		<li><a class="widget" data-widget="bloggers" href="#">Featured Bloggers</a></li>
 		<li><a class="widget" data-widget="slideshow" href="#">Slideshow</a></li>
 		<li><a class="widget" data-widget="mostwatchedvideos" href="#">Most Watched Videos</a></li>
 		<li><a class="widget" data-widget="realtime" href="#">What's Being Read</a></li>
@@ -54,6 +55,10 @@
 		<li class="widget" data-widget="breakingnews">
 			<h3>Breaking News</h3>
 			<p>Must see and trending content ensure your visitors have immediate, real time access to content before anyone else on the web.</p>
+		</li>
+		<li class="widget" data-widget="bloggers">
+			<h3>Featured Bloggers</h3>
+			<p>Featured Bloggers</p>
 		</li>
 		<li class="widget" data-widget="slideshow">
 			<h3>Slideshow</h3>
