Integrated Boot.setup into Mighty; provided new Mighty.option() method. Updated all modules to support.

--- a/factory/index.html
+++ b/factory/index.html
@@ -14,14 +14,14 @@
 
   <link rel="stylesheet" href="css/style.css?v=2">
   <!-- Advertisement Setup start -->
- 
+
   <script type="text/javascript" src="http://o.aolcdn.com/ads/adsWrapper.js"></script>
- 
+
   <script type="text/javascript">
-	 	<!-- 
-	 	adSetTarget('_blank');
-	 	adSetAdURL('/_uac/adpage.html'); 
-	 	//-->
+        <!--
+        adSetTarget('_blank');
+        adSetAdURL('/_uac/adpage.html');
+        //-->
   </script>
   <!-- Advertisement Setup end -->
 </head>
@@ -33,53 +33,53 @@
 </div>
 
 <div class="chooser">
-	<h2>Pick a Widget</h2>
-	<ul>
-		<li><a class="widget" data-widget="mostpopular" href="#">Most Popular</a></li>
-		<li><a class="widget" data-widget="breakingnews" href="#">Breaking News</a></li>
-		<li><a class="widget" data-widget="bloggers" href="#">Featured Bloggers</a></li>
-		<li><a class="widget" data-widget="slideshow" href="#">Slideshow</a></li>
-		<li><a class="widget" data-widget="mostwatchedvideos" href="#">Most Watched Videos</a></li>
-		<li><a class="widget" data-widget="realtime" href="#">What's Being Read</a></li>
-		<li><a class="widget" data-widget="localnews" href="#">Local News</a></li>
+    <h2>Pick a Widget</h2>
+    <ul>
+        <li><a class="widget" data-widget="mostpopular" href="#">Most Popular</a></li>
+        <li><a class="widget" data-widget="breakingnews" href="#">Breaking News</a></li>
+        <li><a class="widget" data-widget="bloggers" href="#">Featured Bloggers</a></li>
+        <li><a class="widget" data-widget="slideshow" href="#">Slideshow</a></li>
+        <li><a class="widget" data-widget="mostwatchedvideos" href="#">Most Watched Videos</a></li>
+        <li><a class="widget" data-widget="realtime" href="#">What's Being Read</a></li>
+        <li><a class="widget" data-widget="localnews" href="#">Local News</a></li>
 
-	</ul>
+    </ul>
 </div>
 
 <div class="factory">
-	<ul class="widgets">
-		<li class="widget" data-widget="mostpopular">
-			<h3>Most Popular</h3>
-			<p>Surfaces the most popular content in a vertical or keyword, ensuring your visitors are a click away from the hottest stories on the web.</p>
-		</li>
-		<li class="widget" data-widget="breakingnews">
-			<h3>Breaking News</h3>
-			<p>Must see and trending content ensure your visitors have immediate, real time access to content before anyone else on the web.</p>
-		</li>
-		<li class="widget" data-widget="bloggers">
-			<h3>Featured Bloggers</h3>
-			<p>Featured Bloggers</p>
-		</li>
-		<li class="widget" data-widget="slideshow">
-			<h3>Slideshow</h3>
-			<p>Pictures are worth a thousand words - satisfy your users' natural desire to witness breaking, popular photo galleries across our network of sites.</p>
-		</li>
-		<li class="widget" data-widget="mostwatchedvideos">
-			<h3>Most Watched Videos</h3>
-			<p>Viral videos are key drivers of visitor engagement. Give your users the best of the web.</p>
-		</li>
-		<li class="widget" data-widget="realtime">
-			<h3>What's Being Read</h3>
-			<p>What people are reading right now!!!</p>
-		</li>
-		<li class="widget" data-widget="localnews">
-			<h3>Local News</h3>
-			<p>News from your City!!!</p>
-		</li>
-	</ul>
+    <ul class="widgets">
+        <li class="widget" data-widget="mostpopular">
+            <h3>Most Popular</h3>
+            <p>Surfaces the most popular content in a vertical or keyword, ensuring your visitors are a click away from the hottest stories on the web.</p>
+        </li>
+        <li class="widget" data-widget="breakingnews">
+            <h3>Breaking News</h3>
+            <p>Must see and trending content ensure your visitors have immediate, real time access to content before anyone else on the web.</p>
+        </li>
+        <li class="widget" data-widget="bloggers">
+            <h3>Featured Bloggers</h3>
+            <p>Featured Bloggers</p>
+        </li>
+        <li class="widget" data-widget="slideshow">
+            <h3>Slideshow</h3>
+            <p>Pictures are worth a thousand words - satisfy your users' natural desire to witness breaking, popular photo galleries across our network of sites.</p>
+        </li>
+        <li class="widget" data-widget="mostwatchedvideos">
+            <h3>Most Watched Videos</h3>
+            <p>Viral videos are key drivers of visitor engagement. Give your users the best of the web.</p>
+        </li>
+        <li class="widget" data-widget="realtime">
+            <h3>What's Being Read</h3>
+            <p>What people are reading right now!!!</p>
+        </li>
+        <li class="widget" data-widget="localnews">
+            <h3>Local News</h3>
+            <p>News from your City!!!</p>
+        </li>
+    </ul>
 </div>
 <script src="../src/mighty/mighty.js"></script>
-<script src="js/jquery.min.js"></script>
+<script src="js/jquery-1.7.1.min.js"></script>
 <script src="js/factory.js"></script>
 </body>
 </html>
