--- a/factory/index.html
+++ b/factory/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Dave Artz">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="shortcut icon" href="../favicon.ico">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
   <link rel="stylesheet" href="css/style.css?v=2">
@@ -24,6 +24,7 @@
         //-->
   </script>
   <!-- Advertisement Setup end -->
+  <link rel="shortcut icon" type="image/png" href="../favicon.png">
 </head>
 
 <body>
@@ -42,7 +43,7 @@
         <li><a class="widget" data-widget="mostwatchedvideos" href="#">Most Watched Videos</a></li>
         <li><a class="widget" data-widget="realtime" href="#">What's Being Read</a></li>
         <li><a class="widget" data-widget="localnews" href="#">Local News</a></li>
-
+        <li><a class="widget" data-widget="amber" href="#">Amber Alerts</a></li>
     </ul>
 </div>
 
@@ -75,6 +76,10 @@
         <li class="widget" data-widget="localnews">
             <h3>Local News</h3>
             <p>News from your City!!!</p>
+        </li>
+        <li class="widget" data-widget="amber">
+            <h3>Amber Alerts</h3>
+            <p>Widget that displays current Amber Alerts.</p>
         </li>
     </ul>
 </div>
