Fixed factory stuff.

--- a/factory/index.html
+++ b/factory/index.html
@@ -83,7 +83,7 @@
         </li>
     </ul>
 </div>
-<script src="http://mighty.aol.com/mighty.js"></script>
+<script src="../src/mighty.js"></script>
 <script src="js/jquery-1.7.1.min.js"></script>
 <script src="js/factory.js"></script>
 </body>
