Factory navigation enhancements (hashtag updates)

--- a/factory/index.html
+++ b/factory/index.html
@@ -30,11 +30,12 @@
 <body>
 
 <div class="header">
-<h1 class="logo">Bearing<b>F</b><b>r</b><b>u</b><b>i</b><b>t</b><i>Because your content is a peacock that wants to fly.</i></h1>
+    <h1 class="logo"><img src="css/mighty-logo.png" width="324" height="185"
+        alt="">Mighty Modules</h1>
 </div>
 
 <div class="chooser">
-    <h2>Pick a Widget</h2>
+    <h2>Pick a Module</h2>
     <ul>
         <li><a class="widget" data-widget="mostpopular" href="#">Most Popular</a></li>
         <li><a class="widget" data-widget="breakingnews" href="#">Breaking News</a></li>
@@ -84,7 +85,7 @@
     </ul>
 </div>
 <script src="../src/mighty.js"></script>
-<script src="js/jquery-1.7.1.min.js"></script>
+<script src="js/jquery.min.js"></script>
 <script src="js/factory.js"></script>
 </body>
 </html>
