Fixed broken modules and applied new best practices.

--- a/factory/index.html
+++ b/factory/index.html
@@ -37,11 +37,14 @@
 <div class="chooser">
     <h2>Pick a Module</h2>
     <ul>
-        <li><a class="widget" data-widget="mostpopular" href="#">Most Popular</a></li>
+        <li><a class="widget" data-widget="mostpopular" href="#">Most Popular
+            Stories</a></li>
         <li><a class="widget" data-widget="breakingnews" href="#">Breaking News</a></li>
         <li><a class="widget" data-widget="bloggers" href="#">Featured Bloggers</a></li>
-        <li><a class="widget" data-widget="slideshow" href="#">Slideshow</a></li>
-        <li><a class="widget" data-widget="mostwatchedvideos" href="#">Most Watched Videos</a></li>
+<!--        <li><a class="widget" data-widget="slideshow"
+    href="#">Slideshow</a></li>
+        <li><a class="widget" data-widget="mostwatchedvideos" href="#">Most
+            Watched Videos</a></li>-->
         <li><a class="widget" data-widget="realtime" href="#">What's Being Read</a></li>
         <li><a class="widget" data-widget="localnews" href="#">Local News</a></li>
         <li><a class="widget" data-widget="amber" href="#">Amber Alerts</a></li>
@@ -51,7 +54,7 @@
 <div class="factory">
     <ul class="widgets">
         <li class="widget" data-widget="mostpopular">
-            <h3>Most Popular</h3>
+            <h3>Most Popular Stories</h3>
             <p>Surfaces the most popular content in a vertical or keyword, ensuring your visitors are a click away from the hottest stories on the web.</p>
         </li>
         <li class="widget" data-widget="breakingnews">
