--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
         </li>
     </ul>
 </div>
-<script src="../src/mighty.js"></script>
+<script src="mighty.js"></script>
 <script src="js/jquery.min.js"></script>
 <script src="js/factory.js"></script>
 </body>
